--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,13 @@
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
+.idea/*
+
 # Package Files #
 *.jar
 *.war
 *.ear
+package-info.java
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
